changed flow of product

--- a/views/progress_agent.handlebars
+++ b/views/progress_agent.handlebars
@@ -224,7 +224,7 @@
             </div>
 
             <!-- <li class="dropdown"> -->
-                  <p>Tenant Emma</p>
+                  <p>Tenant Zimkhita</p>
                   <div class="col-md-8">
 
   <div class="progress" "col-md-8">
