--- a/views/progress_tenant.handlebars
+++ b/views/progress_tenant.handlebars
@@ -320,13 +320,9 @@
 
   <h4>Progress</h4>
     <div class="progress">
-    <div class="progress-bar progress-bar-success" role="progressbar" style="width:33.3%">
-Documents Upload    </div>
-    <div class="progress-bar progress-bar-warning" role="progressbar" style="width:33.3%">
-Image Verification    </div>
-    <div class="progress-bar progress-bar-danger" role="progressbar" style="width:33.3%">
-      Bank Verification
-    </div>
+    <div class="progress-bar progress-bar-success" role="progressbar" style="width:100%">
+Documents Uploaded    </div>
+
   </div>
 </div>
 
@@ -343,9 +339,8 @@ Image Verification    </div>
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4 class="timeline-title">Application to Apartment successful</h4>
+                                            <h4 class="timeline-title">Documents sent to agent</h4>
                                             <p>
-                                                <small class="text-muted"><i class="fa fa-time"></i>11 hours ago</small>
                                             </p>
                                         </div>
                                         <div class="timeline-body">
