--- a/views/users_tenant.handlebars
+++ b/views/users_tenant.handlebars
@@ -315,15 +315,9 @@
                         <h2>Message Alerts</h2>
                         <p>Your recent message alerts</p>
 
-                        <div class="alert alert-success">
-                            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                            <p> <strong>Success</strong> Your have been successful in your application.</p>
-                        </div>
-
                         <div class="alert alert-danger">
                             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                            <p><strong>Warning</strong> you need to upload your documents</p>
-                            <p><strong>Agent</strong> have sent you a request to verify</p>
+                            <p><strong>Emma</strong> has sent you a request to send through your documents</p>
 
                             <!--  Modals-->
                             <div class="panel panel-default">
@@ -369,8 +363,8 @@ upload                                    </button>
                                                 </div>
                                             </div>
                                             <div class="modal-footer">
-                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary">Save changes</button>
+                                                <button type="button" class="btn btn-default" data-dismiss="modal">Send</button>
+                                              <a href="/upload" > <button type="button" class="btn btn-primary">Authenticate</button></a>
                                             </div>
                                         </div>
                                     </div>
